# BitTorrent-Public

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml
documentation/: BitTorrent-Class-Diagram.plantuml  BitTorrent-Thread-Diagram.plantuml  Tracker-Class-Diagram.plantuml  Tracker-Thread-Diagram.plantuml
src/: constants.rs  csv_env.rs  lib.rs  main.rs
src/bencoder/: README.md  common.rs  decode.rs  encode.rs  mod.rs
src/bit_torrent/: bitfield.rs  constants.rs  handshake.rs  index.rs  mod.rs  piece.rs
src/bit_torrent/leecher/: client.rs  common_information.rs  connections.rs  errors.rs  index.rs  mod.rs  peer_connection.rs  peer_handler.rs  peer_list.rs  state.rs  tracker_connection.rs
src/bit_torrent/peer/: client.rs  common_information.rs  errors.rs  index.rs  mod.rs  peer_connection.rs  peer_handler.rs  peer_list.rs  peer_state.rs  remove_torrent.rs  server_connection.rs  server_handler.rs  (+3 more)
src/client/: index.rs  mod.rs
src/configs/: client.csv  congif.csv  default.csv  dev.csv  prod.csv  server.csv
src/file_system/: mod.rs  utils.rs
src/frontend/: glade_sitos.glade  glade_sitos.glade~  index.rs  mod.rs  style.css
src/logger/: index.rs  mod.rs
src/networking/: mod.rs
src/server/: constants.rs  index.rs  mod.rs
src/torrent_file/: README.md  torrent.rs
src/urlencoder/: README.md  encode.rs  errors.rs  mod.rs  reserved_characters.rs
src/utils/: index.rs  mod.rs
torrents/: 1GB.bin.torrent  mono.torrent  rust.torrent
torrentsito/: package-lock.json  package.json
torrentsito/src/: App.js  constants.js  styles.module.scss
(+57 files in other folders)
