[package]
name = "sitos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha-1 = "0.10.0"
hex-literal = "0.3.4"
rand = "0.8.5"
native-tls = "0.2"
gtk = "0.15.5"
log = "0.4.17"
env_logger = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"